# world-graph

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  shell.nix
migrations/: 1_init_triple.sql
public/: index.html  index.js  styles.css
src/: main.rs
