[package]
name = "world-graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["tokio", "macros"] }
clap = { version = "=4.4.18", features = ["env", "derive"] }
ollama-rs = { git = "https://github.com/pepperoni21/ollama-rs" } 
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
anyhow = "1.0.80"
tinytemplate = "1.2.1"
tower-http = { version = "0.5.2", features = ["cors", "fs", "trace"] }
futures = "0.3.30"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"